--- a/ansible/roles/gems/tasks/main.yml
+++ b/ansible/roles/gems/tasks/main.yml
@@ -12,6 +12,7 @@
         cmd: PATH={{ruby_18_bin_dir}}:$PATH update_rubygems
 
 - name: Install Ruby 1.8 gem build depedencies
+  retries: 3
   ansible.builtin.apt:
     name:
       # - libgpgme-dev
@@ -61,6 +62,7 @@
         - gem1.9
 
 - name: Install local ruby 1.8 gems
+  retries: 3
   ansible.builtin.command:
     cmd: gem1.8 install --no-rdoc --no-ri {{item}}
   loop:
