--- a/ansible/package-assets-playbook.yml
+++ b/ansible/package-assets-playbook.yml
@@ -1,11 +1,11 @@
 ---
 - name: |
-    Playbook to build, package and upload assets required by MIA.
+    Playbook to build, package and upload assets required by Alces Concertim.
 
-    MIA has a number of assets that need to be built on a machine similar to
-    the MIA machine itself.  Such as `ruby` versions `1.8` and `1.9` and some
-    C++ Ruby extensions, aka "number crunchers".  Also the daemons, modules
-    and appliances need packaging.
+    Alces Concertim has a number of assets that need to be built on a machine
+    similar to the Concertim machine itself.  Such as `ruby` versions `1.8` and
+    `1.9` and some C++ Ruby extensions, aka "number crunchers".  Also the
+    daemons, modules and appliances need packaging.
 
     This playbook builds them, packages them and uploads them to S3.
   hosts: localhost
