Fix issue with retrying flaky tasks
Specifying `retries` without `until` does nothing.  Specifying `until`
will default `retries` to 3.  Which is sufficient for us.

--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -14,6 +14,8 @@
     dest: /etc/logrotate.d/ct-visualisation-app
 
 - name: Bundle install gems
+  register: result
+  until: result is success
   ansible.builtin.shell: |
     cd "{{ ct_vis_app_core_dir }}"
     ./bin/bundle install
