Fix issue with URL `/` not working
We now redirect to `/--/` which works.  A better solution will be
selected when the apache config file is cleaned up.

--- a/ansible/roles/webserver/tasks/main.yml
+++ b/ansible/roles/webserver/tasks/main.yml
@@ -17,6 +17,7 @@
   loop:
     - conf-available/mia.server_name.conf
     - sites-available/redirect-http-to-https.conf
+    - mia/vhost
 
 - name: Enable mods
   ansible.builtin.command:
