--- a/ansible/roles/webserver/defaults/main.yml
+++ b/ansible/roles/webserver/defaults/main.yml
@@ -1,4 +1,2 @@
-webserver_host: "command"
-webserver_domain: "concertim.alces-flight.com"
-webserver_host_and_domain: "{{webserver_host}}.{{webserver_domain}}"
+webserver_host_and_domain: "command.concertim.alces-flight.com"
 webserver_admin_email: "concertim@alces-flight.com"
