--- a/ansible/roles/package-assets/defaults/main.yml
+++ b/ansible/roles/package-assets/defaults/main.yml
@@ -2,13 +2,13 @@ package_assets_daemons:
   - meryl:main
 
 package_assets_modules:
-  - hacor:main
+  - hacor:enh/use-ct-vis-chassis-templates
   - meca:main
   - sas:main
   - uma:main
 
 package_assets_appliances:
-  - ct-visualisation-app:main
+  - ct-visualisation-app:enh/support-templates
 
 package_assets_fake_gmond_tag: main
 
