Create a single rack during configuration
This works around an IRV loading issue without any racks.  Its also a
better UX to not have to create an initial rack.

--- a/ansible/roles/configure-vanilla/tasks/main.yml
+++ b/ansible/roles/configure-vanilla/tasks/main.yml
@@ -53,3 +53,11 @@
     ruby_bin_dir: "{{ruby_30_bin_dir}}"
     additional_env: ""
     chdir: "{{ rails_root_dir }}/ct-visualisation-app/core"
+
+- name: Create initial rack
+  ansible.builtin.shell:
+    chdir: "{{ rails_root_dir }}/ct-visualisation-app/docs/api/examples/"
+    cmd: |
+      export CONCERTIM_HOST=localhost
+      export AUTH_TOKEN=$(LOGIN=admin PASSWORD={{ admin_password }} ./get-auth-token.sh)
+      ./create-rack.sh
