--- a/ansible/roles/package-assets/defaults/main.yml
+++ b/ansible/roles/package-assets/defaults/main.yml
@@ -1,13 +1,13 @@
 package_assets_daemons:
-  - meryl:main
+  - meryl:revival-18
 
 package_assets_modules:
-  - hacor:main
-  - meca:main
-  - sas:main
+  - hacor:revival-18
+  - meca:revival-18
+  - sas:revival-18
 
 package_assets_appliances:
-  - ct-visualisation-app:main
+  - ct-visualisation-app:revival-18
 
 package_assets_fake_gmond_tag: main
 
