Ensure ct-vis-app is started
Without this creating the initial rack won't work.

--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -62,6 +62,7 @@
   ansible.builtin.service:
     name: "{{item}}"
     enabled: yes
+    state: restarted
   loop:
     - ct-visualisation-app
     - ct-visualisation-job-runner
