--- a/ansible/roles/package-assets/defaults/main.yml
+++ b/ansible/roles/package-assets/defaults/main.yml
@@ -1,15 +1,15 @@
 package_assets_daemons:
-  - meryl:revival-19
+  - meryl:main
 
 package_assets_modules:
-  - hacor:revival-19
-  - meca:revival-19
-  - sas:revival-19
+  - hacor:main
+  - meca:main
+  - sas:main
 
 package_assets_appliances:
-  - ct-visualisation-app:revival-19
+  - ct-visualisation-app:main
 
 package_assets_fake_gmond_tag: main
 
 package_assets_golang_projects:
-  - daemon:metric-reporting-daemon:0.3.1
+  - daemon:metric-reporting-daemon:main
