Remove and/or simplify other tasks and files

--- a/ansible/roles/personality/files/personality.yml
+++ b/ansible/roles/personality/files/personality.yml
@@ -2,10 +2,10 @@
 :personality: 'ct'
 :personality_name: 'Alces Concertim'
 :personality_url: 'https://alces-flight.com/'
-:name: 'Command %VERSION%'
-:about: 'Command Release: %RELEASE%'
-:short: 'Command'
-:title: 'Command Management Appliance'
+:name: 'Concertim %VERSION%'
+:about: 'Concertim Release: %RELEASE%'
+:short: 'Concertim'
+:title: 'Alces Concertim'
 :subtitle: 'From Alces Concertim'
 :manufacturer: 'Alces Concertim'
 :error_mail: 'concertim.support@alces-flight.com'
@@ -13,5 +13,3 @@
 :support_mail: 'concertim.support@alces-flight.com'
 :support_web: 'https://alces-flight.com/'
 :support_tel: ''
-:mia_chassis_template_name: 'Command'
-:isla_chassis_template_name: 'Control'
