--- a/ansible/roles/package-assets/defaults/main.yml
+++ b/ansible/roles/package-assets/defaults/main.yml
@@ -1,10 +1,19 @@
-package_assets_daemons:
-  - meryl:main
-
 package_assets_appliances:
   - ct-visualisation-app:main
 
 package_assets_fake_gmond_tag: main
 
 package_assets_golang_projects:
-  - daemon:metric-reporting-daemon:main
+  - repo: concertim-metric-reporting-daemon
+    name: metric-reporting-daemon
+    # This could be a git tag, git branch or git commit.
+    tag: main
+    type: daemon
+    subdir: ""
+
+  - repo: concertim-metric-reporting-daemon
+    name: metric-processing-daemon
+    # This could be a git tag, git branch or git commit.
+    tag: main
+    type: daemon
+    subdir: processing
