Naming consistency for installed daemons
They all have a `ct-` prefix now.

--- a/ansible/roles/ganglia/templates/gmetad.conf
+++ b/ansible/roles/ganglia/templates/gmetad.conf
@@ -40,11 +40,17 @@ scalable off
 # If a # port is not specified then 8649 (the default gmond port) is
 # assumed.
 # default: There is no default value
+
 # standard ganglia stream
-data_source "gmond" localhost
+# Currently disabled.  If we wish to re-enable it care should be taken to
+# ensure that its metrics are not processed by ct-metric-processing-daemon.
+# Perhaps adding it to a different "localcluster" cluster would be sufficient.
+# data_source "gmond" localhost
+
 # User-defined metric injection daemon
-data_source "metric-reporting-daemon_local" localhost:8678
+data_source "ct-metric-reporting-daemon" localhost:8678
 
 {% if want_fake_metrics %}
+# Fake metric generator.
 data_source "fake_gmond" localhost:8677
 {% endif %}
