--- a/ansible/roles/package-daemons/tasks/main.yml
+++ b/ansible/roles/package-daemons/tasks/main.yml
@@ -32,11 +32,14 @@
     mode: "644"
   loop: "{{ static_daemons }}"
 
+- name: Install {{item}} logrotate configuration
+  ansible.builtin.copy:
+    src: "{{item}}.logrotate"
+    dest: "/etc/logrotate.d/{{item}}"
+  loop: "{{ static_daemons }}"
+
 - name: Additional metric reporting daemon configuration
   include_tasks: metric_reporting_daemon_config.yml
-
-- name: Additional metric processing daemon configuration
-  include_tasks: metric_processing_daemon_config.yml
 
 - name: Ensure that daemons are enabled
   ansible.builtin.service:
