Tidy up asset build
* Tidy up golang package building ansible tasks.
* Rework ruby building tasks and script to more closely match golang
  version.
* No longer create release.info or version.yml files.  If we decide that
  we want these again, they are better of being created as part of the
  deploy ansible tasks.

--- a/ansible/roles/package-assets/defaults/main.yml
+++ b/ansible/roles/package-assets/defaults/main.yml
@@ -1,18 +1,23 @@
-package_assets_appliances:
-  - ct-visualisation-app:main
-
 package_assets_fake_gmond_tag: main
+
+package_assets_ruby_projects:
+  - repo: concertim-ct-visualisation-app
+    name: ct-visualisation-app
+    # This could be a git tag, git branch or git commit.
+    tag: main
+    type: appliance
+    subdir: ""
 
 package_assets_golang_projects:
   - repo: concertim-metric-reporting-daemon
-    name: metric-reporting-daemon
+    name: ct-metric-reporting-daemon
     # This could be a git tag, git branch or git commit.
     tag: main
     type: daemon
     subdir: ""
 
   - repo: concertim-metric-reporting-daemon
-    name: metric-processing-daemon
+    name: ct-metric-processing-daemon
     # This could be a git tag, git branch or git commit.
     tag: main
     type: daemon
