--- a/ansible/roles/package-assets/tasks/build-ruby-package.yml
+++ b/ansible/roles/package-assets/tasks/build-ruby-package.yml
@@ -1,7 +1,6 @@
-- name: Build golang package {{item.name}}
+- name: Build ruby package {{item.name}}
   ansible.builtin.command:
-    cmd: |
-      {{role_path}}/files/scripts/build-golang-package.sh
+    cmd: "{{role_path}}/files/scripts/build-ruby-package.sh"
   environment:
     BUILD_DIR:   "{{package_assets_repo_dir}}"
     GH_TOKEN: "{{gh_token}}"
@@ -12,18 +11,19 @@
     BUILD_TAG: "{{item.tag}}"
     PKG_TYPE: "{{item.type}}"
     REPO_SUBDIR: "{{item.subdir}}"
-  register: build_golang_packages
+  register: build_ruby_packages
   # The failure will become fatal after the stderr and stdout have been printed.
   ignore_errors: True
 
 - name: "Build packages stderr"
   ansible.builtin.debug:
-    var: build_golang_packages.stderr_lines
-  failed_when: build_golang_packages.rc != 0
+    var: build_ruby_packages.stderr_lines
+  failed_when: build_ruby_packages.rc != 0
   ignore_errors: True
-  when: build_golang_packages.rc != 0
+  when: build_ruby_packages.rc != 0
 
 - name: "Build packages stdout"
   ansible.builtin.debug:
-    var: build_golang_packages.stdout_lines
-  failed_when: build_golang_packages.rc != 0
+    var: build_ruby_packages.stdout_lines
+  failed_when: build_ruby_packages.rc != 0
+
