--- a/ansible/roles/license-limits/tasks/main.yml
+++ b/ansible/roles/license-limits/tasks/main.yml
@@ -1,12 +1,12 @@
-# Originally the "final" bundle installed a script which set the following
-# when the MIA was rebooted.  We now do this as part of the configure process,
-# which is somewhat earlier.  If we run into issues to do with these
-# values this might be the case.
-#
-# I believe that this change is safe, as long was we only configure an
-# appliance via the ansible configure playbook.  That is, as long as we no
-# longer use the old "insert USB stick" method.
-#
+- name: Create empty release.yml
+  ansible.builtin.copy:
+    content: |
+      {}
+    dest: "{{ release_yml_dest }}"
+    owner: "{{app_user}}"
+    group: "{{app_user}}"
+    mode: "644"
+
 # XXX Is there a better way of doing this.  The loop and registering is quite
 # unclear.
 - name: Add asset limits
@@ -18,14 +18,6 @@
         default: 100
       - name: nrad_limit
         default: 3
-      - name: sensor_limit
-        default: 5
-      - name: vm_limit
-        default: 5
-      - name: cable_limit
-        default: 10
-      - name: asset_flag
-        default: true
       - name: expire_time
         default: "{{ license_expiration_time }}"
   block:
