Sanitize ansible playbook
* Simplify installation directories: now rooted at `/opt/concertim`
  instead of `/data/private/share/`.
* Remove unused directories, e.g., `/data/public`.
* Replace some hard-coded paths with ansible variables
* Remove unused variables
* Improve comments

--- a/ansible/roles/appliance-dev/tasks/setup_dev_ct_vis_app.yml
+++ b/ansible/roles/appliance-dev/tasks/setup_dev_ct_vis_app.yml
@@ -1,17 +1,13 @@
 - name: Check for dev installation
-  vars:
-    dev_root_dir: /data/private/share/dev
   ansible.builtin.command:
-    cmd: ls -d {{dev_root_dir}}/appliances/ct-visualisation-app
+    cmd: ls -d {{dev_root_dir}}/ct-visualisation-app
   register: dev_ct_vis_dir
   failed_when: False
 
 
 - name: Bundle install gems for dev ct-visualisation-app
-  vars:
-    dev_root_dir: /data/private/share/dev
   ansible.builtin.shell: |
-    cd {{dev_root_dir}}/appliances/ct-visualisation-app/core
+    cd {{dev_root_dir}}/ct-visualisation-app/core
     ./bin/bundle install
   when: dev_ct_vis_dir.stdout != ""
 
