--- a/ansible/roles/webserver/files/nginx/snippets/server-https.d/ct-visualisation-assets.conf
+++ b/ansible/roles/webserver/files/nginx/snippets/server-https.d/ct-visualisation-assets.conf
@@ -1,4 +1,8 @@
-# Nginx serves assets in production.  The appliance-dev role disabled this.
+# Nginx serves assets in production.  This is separated to its own file in case
+# the appliance-dev role needs to disable this.
+#
+# XXX If I come to the conclusion that it doesn't and won't, this should be
+# merged with the other ct-visualisation-app rules.
 
 location ^~ /assets/ {
   # The default behaviour is to serve the files from the configured root, which
