--- a/ansible/roles/configure-vanilla/tasks/main.yml
+++ b/ansible/roles/configure-vanilla/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Copy user default scripts
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src:  "{{ item }}"
     dest: /usr/local/sbin/
     owner: root
@@ -11,7 +11,7 @@
 - name: Copy user default data files
   ansible.builtin.template:
     src:  "{{ item }}"
-    dest: /data/private/share/etc/concurrent-thinking/appliance/
+    dest: "{{ct_etc_dir}}"
     owner: root
     group: "{{app_user}}"
     mode: "640"
@@ -25,11 +25,11 @@
     runner_args: /usr/local/sbin/set-user-defaults.rb
     ruby_bin_dir: "{{ruby_30_bin_dir}}"
     additional_env: ""
-    chdir: "{{ rails_root_dir }}/ct-visualisation-app/core"
+    chdir: "{{ ct_installation_dir }}/ct-visualisation-app/core"
 
 - name: Create initial rack
   ansible.builtin.shell:
-    chdir: "{{ rails_root_dir }}/ct-visualisation-app/docs/api/examples/"
+    chdir: "{{ ct_installation_dir }}/ct-visualisation-app/docs/api/examples/"
     cmd: |
       export CONCERTIM_HOST=localhost
       export AUTH_TOKEN=$(LOGIN=admin PASSWORD={{ admin_password }} ./get-auth-token.sh)
