--- a/ansible/roles/ct-visualisation-app/defaults/main.yml
+++ b/ansible/roles/ct-visualisation-app/defaults/main.yml
@@ -1,3 +1,3 @@
-ct_vis_app_path: "{{ rails_root_dir }}/ct-visualisation-app"
-ct_vis_app_core_dir: "{{ rails_root_dir }}/ct-visualisation-app/core"
+ct_vis_app_path: "{{ ct_installation_dir }}/ct-visualisation-app"
+ct_vis_app_core_dir: "{{ ct_installation_dir }}/ct-visualisation-app/core"
 ct_vis_app_log_file: /var/log/ct-visualisation-app.log
