--- a/ansible/roles/license-limits/tasks/main.yml
+++ b/ansible/roles/license-limits/tasks/main.yml
@@ -1,7 +1,7 @@
-- name: Install release.yml
+- name: Install license_limits.yml
   ansible.builtin.template:
-    src:  release.yml
-    dest: "{{release_yml_dest}}"
+    src:  licence-limits.yml
+    dest: "{{ct_etc_dir}}"
     owner: root
     group: "{{app_user}}"
     mode: "644"
