--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -53,7 +53,7 @@ Vagrant.configure("2") do |config|
       unless to_boolean(ENV['ACCEPTANCE'])
         v.vm.synced_folder ANSIBLE_DIR, "/ansible"
         if File.directory?(CT_SRC_DIR)
-          v.vm.synced_folder CT_SRC_DIR, "/data/private/share/dev"
+          v.vm.synced_folder CT_SRC_DIR, "/opt/concertim/dev"
         end
 
         if Vagrant.has_plugin?("vagrant-notify-forwarder")
